<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/scene"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:gravity="center">

            <com.gee12.drunkbassist.control.MyButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/button_start"
                android:onClick="onClickStartButton"
                android:layout_margin="3dp"
                style="@style/ButtonStyle" />

            <com.gee12.drunkbassist.control.MyButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/records"
                android:id="@+id/button_records"
                android:onClick="onClickRecordsButton"
                android:layout_margin="3dp"
                style="@style/ButtonStyle" />

            <com.gee12.drunkbassist.control.MyButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:id="@+id/button_developer"
                android:onClick="onClickDevButton"
                android:layout_margin="3dp"
                style="@style/ButtonStyle" />

            <com.gee12.drunkbassist.control.MyButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:id="@+id/button_quit"
                android:onClick="onClickExitButton"
                android:layout_margin="3dp"
                style="@style/ButtonStyle" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>