<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/scene"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >
        <TableLayout
            android:id="@+id/table_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/header_name"
                    android:textColor="@color/text_color"
                    android:textSize="30sp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_points"
                    android:textColor="@color/text_color"
                    android:textSize="30sp"
                    android:id="@+id/textView"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:minWidth="50dp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_degree"
                    android:textColor="@color/text_color"
                    android:textSize="30sp"
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:minWidth="50dp"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow android:layout_height="1px" android:background="#BBBBBB">
                <View android:layout_width="match_parent"
                    android:layout_height="2dp" />
            </TableRow>

        </TableLayout>

    </ScrollView>
</FrameLayout>